# ufotree

./: Cargo.toml  README.md
assets/: arial.ufoz
assets/arial.ufo/: fontinfo.plist  kerning.plist  lib.plist
assets/arial.ufo/glyphs/: A_.glif  A_E_.glif  A_E_acute.glif  A_acute.glif  A_breve.glif  A_breveacute.glif  A_brevedotbelow.glif  A_brevegrave.glif  A_brevehookabove.glif  A_brevetilde.glif  A_circumflex.glif  A_circumflexacute.glif  A_circumflexdotbelow.glif  A_circumflexgrave.glif  A_circumflexhookabove.glif  A_circumflextilde.glif  A_dieresis.glif  A_dotbelow.glif  A_grave.glif  A_hookabove.glif  A_lpha.glif  A_lphatonos.glif  A_macron.glif  A_ogonek.glif  A_ring.glif  A_ringacute.glif  A_tilde.glif  B_.glif  B_eta.glif  C_.glif  C_acute.glif  C_caron.glif  C_cedilla.glif  C_circumflex.glif  C_dot.glif  C_hi.glif  D_.glif  D_caron.glif  D_elta#1.glif  D_elta.glif  (+1633 more)
examples/: README.md
src/: errors.rs  lib.rs  loader.rs
src/models/: mod.rs  ufo_tree.rs
src/parsers/: mod.rs
src/parsers/ufo3/: metainfo.rs  mod.rs
