[package]
name = "ufotree"
author = ["Spencer C. Imbleau", "Sebastian Hamel"]
version = "0.1.0"
keywords = ["ufo", "ufoz"]
categories = ["parser-implementations"]
license = "MIT/Apache-2.0"
description = "Represent .ufo or .ufoz packages as a read-only tree."
repository = "https://github.com/simbleau/ufotree"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
